<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/Theme.Service"
            android:text="@string/Pol" />

        <TextView
            style="@style/Theme.Number"
            android:text="@string/PolNum" />

        <View style="@style/Theme.divider" />

        <TextView
            style="@style/Theme.Service"
            android:text="@string/Amb" />

        <TextView
            style="@style/Theme.Number"
            android:text="@string/AmbFirNum" />

        <View style="@style/Theme.divider" />

        <TextView
            style="@style/Theme.Service"
            android:text="@string/Fir" />

        <TextView
            style="@style/Theme.Number"
            android:text="@string/AmbFirNum" />
    </LinearLayout>
</ScrollView>
