<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <RelativeLayout
            android:id="@+id/FamilyCard"
            style="@style/layoutCard.Family">

            <ImageView
                style="@style/layoutCard.picture"
                android:contentDescription="@string/FamAct"
                android:src="@drawable/family_grandmother" />

            <TextView
                style="@style/layoutCard.TextView"
                android:text="@string/FamAct" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/NumberCard"
            style="@style/layoutCard.Number">

            <ImageView
                style="@style/layoutCard.picture"
                android:contentDescription="@string/NumAct"
                android:src="@drawable/number_three" />

            <TextView
                style="@style/layoutCard.TextView"
                android:text="@string/NumAct" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <RelativeLayout
            android:id="@+id/ColorsCard"
            style="@style/layoutCard.Color">

            <ImageView
                style="@style/layoutCard.picture"
                android:contentDescription="@string/ColAct"
                android:src="@drawable/color_red" />

            <TextView
                style="@style/layoutCard.TextView"
                android:text="@string/ColAct" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/PhrasesCard"
            style="@style/layoutCard.Phrases">

            <ImageView
                style="@style/layoutCard.picture.DEU"
                android:contentDescription="@string/PhrAct" />

            <TextView
                style="@style/layoutCard.TextView"
                android:text="@string/PhrAct" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/EmeAct" />
    </RelativeLayout>
    </LinearLayout>

</ScrollView>